--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,21 @@
 .header{
     height: 50px;
-    background-color: gainsboro;
-    background: url(../../assets/images/header.jpg) center;
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 80px 15px;
+    overflow: hidden;
+    position: relative;
+}
+
+.headerImage{
+    background-color: gainsboro;
+    background: url(../../assets/images/header.jpg) center;
+    background-size: 110%;
+    position: absolute;
+    top: -10%;
+    bottom: -10%;
+    left: -10%;
+    right: -10%;
+    z-index: -1;
 }
